# mldata-cli

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md  branding.txt  epic-list.md  implementation-plan.md  prioritized-backlog.md  product-vision.md  release-plan.md  sprint-backlog.md  technical-design.md  user-story-backlog.md
docs/v0.2.0/: 01-epic.md  02-user-stories.md  03-sprint-backlog.md  04-technical-design.md  cli-observations.md
docs/v0.3.0/: 01-epic.md  02-user-stories.md  03-sprint-backlog.md  04-technical-design.md
docs/v0.4.0/: 01-epic.md  02-user-stories.md  03-sprint-backlog.md  04-technical-design.md
src/mldata/: __init__.py  __main__.py
src/mldata/checks/: __init__.py  base.py  duplicates.py  labels.py  missing.py  schema.py
src/mldata/cli/: __init__.py  main.py
src/mldata/connectors/: __init__.py  base.py  huggingface.py  kaggle.py  local.py  openml.py  registry.py
src/mldata/core/: __init__.py  cache.py  config.py  diff.py  drift.py  export.py  fetch.py  framework.py  incremental.py  manifest.py  normalize.py  parallel.py  profile.py  schema.py  search.py  split.py  validate.py
src/mldata/integrations/: __init__.py  dvc.py  gitlfs.py
src/mldata/models/: __init__.py  config.py  dataset.py  manifest.py  report.py
src/mldata/utils/: __init__.py  auth.py  hashing.py  logging.py  progress.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_connectors.py  test_pipeline.py
tests/unit/: test_cli.py  test_core_services.py  test_models.py  test_utils.py
